Add complete frontend code and fix .gitignore
- Fixed .gitignore to allow frontend/public directory
- Added Next.js frontend application with all components
- Added TypeScript configuration and dependencies
- Added Docker configuration for frontend
- Added development scripts for both frontend and backend
- Converted frontend from submodule to regular files

--- a/.gitignore
+++ b/.gitignore
@@ -244,7 +244,8 @@ dist
 
 # Gatsby files
 .cache/
-public
+# Note: public in root, but allow frontend/public
+/public
 
 # Vuepress build output
 .vuepress/dist
