--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-sqlalchemy==2.0.23
+sqlalchemy==1.4.53
 psycopg2-binary==2.9.9
 python-jose==3.3.0
 passlib==1.7.4
@@ -13,3 +13,8 @@ pydantic-settings==2.1.0
 alembic==1.12.1
 pytest==7.4.3
 httpx==0.25.2
+databases==0.8.0
+asyncpg==0.29.0
+pymongo==4.6.0
+redis==5.0.1
+aiofiles==23.2.1
